# aip-agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  UPDATED_README_with_comparison.md  api.md  docker-compose.yml  pyproject.toml  setup.py
examples/: membase_hub.py
examples/aip_agent/: grpc_agent.py
examples/aip_agent_basic/: aip_chat_client.py
examples/aip_agent_config/: README.md  agent_gradio.py  client.py  client_gradio.py  mcp_agent.config.yaml  server.py
examples/aip_agents/: agent_template.py  aip_agent.config.yaml  grpc_autogen_agent.py  grpc_custom_agent.py  grpc_full_agent.py  grpc_full_agent_gradio.py  grpc_news_agent.py  grpc_tool_agent.py  grpc_trader_agent.py  grpc_trader_agent_gradio.py  mcp_server.py
examples/aip_agents_llm/: aip_agent.config.yaml  grpc_full_agent.py  grpc_full_agent_gradio.py
examples/aip_chess_game/: README.md  aip_agent.config.yaml  app.py  common.py  main.py  role.py
examples/aip_dex/: BOT_MANAGEMENT_README.md  BOT_WORKFLOW_GUIDE.md  CONFIG_USAGE.md  DATA_STRUCTURE_DESIGN.md  DB_OPERATIONS_SUMMARY.md  Dockerfile.scheduler  METAMASK_LOGIN_GUIDE.md  METAMASK_LOGIN_README.md  METAMASK_TESTING.md  OWNER_STRATEGY_GUIDE.md  README.md  SCHEDULER.md  SESSION_PERSISTENCE.md  SIMPLIFIED_TOKEN_SERVICE.md  TRADING_BOT.md  TRADING_BOT_SETUP.md  UUID_FIXES_SUMMARY.md  WAIT_CONFIG_README.md  bot_config.json  check_constraints.py  clean_initial_balance.py  config_minutes_example.json  design.md  docker-compose.scheduler.yml  env.example  env.scheduler.example  example_usage.py  example_wait_config.py  fix_snapshot_type_constraint.py  main.py  remove_account_address_constraint.py  requirements.txt  reset_trading_bot_tables.py  run_bot.py  run_scheduler.py  scheduler.py  test  test_birdeye.py  test_bot_management.py  test_data_mapping.py  (+17 more)
examples/aip_grpc/: grpc_agent.py  grpc_agent_server.py  grpc_client.py  grpc_server.py  grpc_tool.py
examples/aip_hubs/: agent_hub.py  config_check.py  config_hub.py  memory_hub.py
examples/aip_personal_agents/: README.md  STREAMING_CHAT_API_COMPLETE.md  api.md  personal_agent_gradio.py  personal_agent_multiple_gradio.py
schema/: aip-agent.config.schema.json  mcp-agent.config.schema.json
scripts/: requirements.txt  sync_dependencies.py
src/: client.py
src/aip_agent/: agent.py  (+6 more)
tests/: chain_test.py  memory_test.py  test_upload.py
whitepaper/: AIP_whitepaper_en.md
(+155 files in other folders)
