[project]
name = "aip-agent"
version = "0.1.0"
description = "A Membase AIP project for chroma"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "mcp>=1.2.1",
 "chromadb>=0.6.0",
 "web3>=7.8.0",
 "twikit>=2.3.3",
 "fastapi>=0.115.6",
 "instructor>=1.7.0",
 "opentelemetry-distro>=0.50b0",
 "opentelemetry-exporter-otlp-proto-http>=1.29.0",
 "pydantic-settings>=2.7.0",
 "pydantic>=2.10.4",
 "pyyaml>=6.0.2",
 "rich>=13.9.4",
 "typer>=0.15.1",
 "numpy>=2.2.1",
 "scikit-learn>=1.6.0",
 "gradio>=5.16.0",
 "loguru>=0.7.3",
 "autogen-core==0.4.8",
 "grpcio==1.70.0",
 "membase>=0.1.0",
]
[[project.authors]]
name = "felix"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.uv.sources]
membase = { git = "https://github.com/unibaseio/membase.git" }

[project.scripts]
aip-agent = "agent:main"
