[project]
name = "aip-agent"
version = "0.1.5"
description = "A Membase AIP project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "mcp>=1.2.1",
 "chromadb>=0.6.0",
 "twikit>=2.3.3",
 "fastapi>=0.115.6",
 "instructor>=1.7.0",
 "opentelemetry-distro>=0.50b0",
 "opentelemetry-exporter-otlp-proto-http>=1.29.0",
 "pydantic-settings>=2.7.0",
 "pydantic>=2.10.4",
 "pyyaml>=6.0.2",
 "rich>=13.9.4",
 "typer>=0.15.1",
 "scikit-learn>=1.6.0",
 "loguru>=0.7.3",
 "autogen-core==0.4.8",
 "grpcio==1.70.0",
 "flask>=3.1.0",
 "gradio>=5.20.1",
 "plotly>=6.0.1",
 "membase>=0.1.8",
 "apify-client>=1.9.3",
 "tiktoken>=0.9.0",
 "chess>=1.11.2",
 "flask-cors>=5.0.1",
 "names>=0.3.0",
 "datetime>=5.5",
 "sqlalchemy>=2.0.41",
 "sqlalchemy-utils>=0.41.2",
 "psycopg2-binary>=2.9.10",
 "psycopg2>=2.9.10",
]
[[project.authors]]
name = "felix"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.uv.sources]
membase = { git = "https://github.com/unibaseio/membase.git" }

[project.scripts]
aip-agent = "agent:main"
